...
                    {
                      color: theme.foreground,
                      fontFamily: font('body'),
                      textAlign: isRTL ? 'right' : 'left',
                    },
                  ]}
                  testID="saved-search"
                  value={searchInput}
                />
              </View>
              <View style={[styles.sortRow, rowDirection]}>
                <Text
                  style={[
...
