appId: com.salehspace.wahb
---
- launchApp:
    clearState: false
- assertVisible: 'PODS'
- tapOn: 'NEWS'
- assertVisible: 'NEWS'
- tapOn: 'NEWS'
- assertVisible: 'Today'
- tapOn: 'Today'
- tapOn: 'PODS'
- tapOn:
    id: 'pods-playback-toggle'
- takeScreenshot: 'ui-parity-pods'
